added ER concepts and API

--- a/02_database_basics.ipynb
+++ b/02_database_basics.ipynb
@@ -125,7 +125,8 @@
     "   - insert new rows into a table\n",
     "   - delete rows from a table\n",
     "   - update one or more attributes of one or more rows in a table\n",
-    "   - retrieve and possibly transform rows combing from one or more tables"
+    "   - retrieve and possibly transform rows combing from one or more tables\n",
+    " - this section will mostly focus on reading data (last point)"
    ]
   },
   {
@@ -146,6 +147,34 @@
     "   - cannot have two rows with the same primary key\n",
     " - _foreign keys_ are used to refer to rows of other tables\n",
     "   - e.g. a table with grades will have foreign keys that point to the student and the course"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## domain\n",
+    " - good database design has\n",
+    "   - one table for each \"entity\" in the domain\n",
+    "   - relationships between entities\n",
+    " - types of relationships:\n",
+    "   - 1 to 1 (can be stored in either entity, but NOT BOTH, or in a separate talbe)\n",
+    "   - 1 to n (must be stored in the entity with cardinality \"1\", or in a separate table)\n",
+    "   - m to n (requires a separate table)  \n",
+    " - example:\n",
+    "   - entity students\n",
+    "     - relationship mentor (suppose 1 to 1), three possibilities\n",
+    "       - have a column \"mentor\"\n",
+    "       - have a column \"mentee\"\n",
+    "       - have a new table (mentor, mentee)\n",
+    "   - entity courses\n",
+    "   - entity professors\n",
+    "   - relationship grades (m to n -> requires a table)\n",
+    "     - student, course, grade\n",
+    "   - relationship teaches (m to n -> requires a table)\n",
+    "     - professors, courses\n",
+    " - sql shines when \"navigating\" across relationships\n",
+    "   - example: for each student, find the professor that gave them the highest grade"
    ]
   },
   {
@@ -246,6 +275,16 @@
    "source": [
     "## examples of complex queries\n",
     " - TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## programmatically interfacing to a RDBMS\n",
+    " - connections\n",
+    " - cursors\n",
+    " - sql injection and proper escaping"
    ]
   },
   {
