--- a/00_intro/00_intro.ipynb
+++ b/00_intro/00_intro.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Why Practical Training is Crucial"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Why bridging the gap is important\n",
     "\n",
@@ -24,78 +20,180 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are plenty of expensive courses, thick books, and jaded postdocs telling you how to do things in theory - and that's great! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But... how do you get there?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's play a little game, can you tell me how to do each of these?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Problem                                                | Implementation |\n",
+    "|--------------------------------------------------------|----------------|\n",
+    "| Develop this new framework over the next 6 months      | ? |\n",
+    "| Adding this feature will take a while                  | ? |\n",
+    "| The code you're writing is turnign into a monster      | ? |\n",
+    "| Hmmm this Jupyter notebook is gettign too long         | ? |\n",
+    "| Writing documentation is too troublesome               | ? |\n",
+    "| The code of the other developer looks terrible         | ? |\n",
+    "| \"Why is there a super() in here???\"                    | ? |\n",
+    "| \"You know, you should make this script run with a CLI\" | ? |\n",
+    "| \"How are these objects related?\"                       | ? |\n",
+    "| Chart the structure of your project                    | ? |\n",
+    "| Figure out which part is slowing down the code         | ? |\n",
+    "| Speed up this NumPy code                               | ? |\n",
+    "| This loop is really slow... |  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solution:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Problem                                                | Implementation |\n",
+    "|--------------------------------------------------------|----------------|\n",
+    "| Develop this new framework over the next 6 months      | Agile, Sprint planning, etc. |\n",
+    "| Adding this feature will take a while                  | Sprint planning, review process |\n",
+    "| The code you're writing is turnign into a monster      | Code architecture, refactoring |\n",
+    "| Hmmm this Jupyter notebook is gettign too long         | module architecture |\n",
+    "| Writing documentation is too troublesome               | AutoDoc, Docstring creator, etc |\n",
+    "| The code of the other developer looks terrible         | code formatter, linting |\n",
+    "| \"Why is there a super() in here???\"                    | Java Developers |\n",
+    "| \"What are these properties?\"                           | Setters and Getters |\n",
+    "| \"You know, you should make this script run with a CLI\" | click |\n",
+    "| \"How are these objects related?\"                       | Coda Analytzr |\n",
+    "| \"Can you show me how this project is structured?\"      | UML, Code Analyzer |\n",
+    "| Figure out which part is slowing down the code         | Dynamic Code Analyzer / Profiler |\n",
+    "| Speed up this NumPy code                               | Numba |\n",
+    "| This loop is really slow....                           | Map(), Numba, Dask |\n",
+    "| I should run this in parallel...                       | Multiprocessing, Dask |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Is this Course for you?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://blog.codinghorror.com/content/images/uploads/2009/02/6a0120a85dcdae970b012877707a45970c-pi.png\" width=320>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have you ever gotten..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "source": [
-    "## Gap between theoretical knowledge and being able to do it\n",
+    "- a shared project in your group, but couldn't figure out what 80\\% of the functions or objects did?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- a code from a previous student/phd/postdoc and though -- WHAT THE F- is this?!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- a bachelor student to use your code and only gotten stupid questions from them?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I hate to break it to you, but you also write bad code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We all write bad code, and the point is not to write perfect code, but to write less bad code.\n",
     "\n",
-    "It all sounds easy enough, but how do I actually do this?\n",
-    "\n",
-    "How do you build a piece of code that should be used by other people?"
+    "Just a world with less bad code. That's the dream."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
-    "# Research Software Projects\n",
-    "https://swcarpentry.github.io/managing-research-software-projects/"
+    "# Exercise"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
-    "# Overview"
+    "- Pair up in groups of 2 or 3\n",
+    "- Show the other person your last opened python code you wrote\n",
+    "- Spend 5 minutes trying to unsderstand it\n",
+    "- Discuss the code"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
+   "source": [
+    "# Overview of the Course"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "1. Fundamentals of Production Code\n",
+    "   - Workflow Organization\n",
     "   - Environments\n",
-    "   - Code Style\n",
+    "   - Code Style and Formatters\n",
     "   - Design Patterns\n",
     "   - Thinking Functionally\n",
+    "   - Module Architecture\n",
+    "   - CLI Interfaces\n",
     "2. Data Management Fundamentals\n",
     "    - Pre-SQL\n",
     "    - SQL\n",
     "    - NoSQL\n",
+    "    - Graph Databases\n",
     "3. Continuous Integration Pipeline\n",
     "    - Git\n",
     "    - Unit Tests\n",
@@ -106,18 +204,11 @@
     "    - Coding\n",
     "5. Processing Data Efficiently\n",
     "    - Tensorflow\n",
+    "    - Network Architeictures & Applications\n",
+    "    - Slurm\n",
     "    - Numba\n",
     "    - Dask"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -139,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
