added nosql part

--- a/02_database_basics/02_database_basics.ipynb
+++ b/02_database_basics/02_database_basics.ipynb
@@ -1336,6 +1336,477 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
+   },
+   "source": [
+    "## Topics\n",
+    "\n",
+    "- Big Data\n",
+    "- NoSQL databases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Big Data\n",
+    "\n",
+    "<img src=\"https://media.makeameme.org/created/big-data-big-5ad56d.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is Big Data\n",
+    "\n",
+    "- high Volume\n",
+    "- high Velocity\n",
+    "- high Variety\n",
+    "- Veracity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Sources\n",
+    "\n",
+    "- Social media and networks\n",
+    "- Scientific instruments\n",
+    "- Mobile devices\n",
+    "- Sensor technology and networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NoSQL\n",
+    "\n",
+    "What does NoSQL actually mean?\n",
+    "A bit of history …\n",
+    "- 1998: First used for a relational database that omitted usage of SQL\n",
+    "- 2009: First used during a conference to advocate non-relational databases\n",
+    "\n",
+    "NoSQL is an accidental term with no precise definiƟon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NoSQL: Overview\n",
+    "\n",
+    "Main objective: implement distributed state\n",
+    "\n",
+    "- Different objects stored on different servers\n",
+    "- Same object replicated on different servers\n",
+    "\n",
+    "Main idea: give up some of the ACID constraints to improve performance\n",
+    "\n",
+    "Simple interface:\n",
+    "\n",
+    "- Write (=Put): needs to write all replicas\n",
+    "- Read (=Get): may get only one\n",
+    "\n",
+    "Eventual consistency <- Strong consistency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NoSQL Six key features\n",
+    "\n",
+    "1. Scale horizontally “simple operations”\n",
+    "2. Replicate/distribute data over many servers\n",
+    "3. Simple call level interface (contrast w/ SQL)\n",
+    "4. Weaker concurrency model than ACID\n",
+    "5. Efficient use of distributed indexes and RAM\n",
+    "6. Flexible schema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Types of NoSQL Databases\n",
+    "\n",
+    "Core types\n",
+    "- Key-value stores\n",
+    "- Document stores\n",
+    "- Wide column (column family, column oriented, …) stores\n",
+    "- Graph databases\n",
+    "\n",
+    "Non-core types\n",
+    "- Object databases\n",
+    "- Native XML databases\n",
+    "- RDF stores\n",
+    "- ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key-Value Stores\n",
+    "\n",
+    "Data model\n",
+    "- he most simple NoSQL database type\n",
+    "    - Works as a simple hash table (mapping)\n",
+    "- Key-value pairs\n",
+    "    - Key (id, idenƟfier, primary key)\n",
+    "    - Value: binary object, black box for the database system\n",
+    "\n",
+    "Query patterns\n",
+    "- Create, update or remove value for a given key\n",
+    "- Get value for a given key\n",
+    "\n",
+    "Characteristics\n",
+    "- Simple model ⇒ great performance, easily scaled, …\n",
+    "- Simple model ⇒ not for complex queries nor complex data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key-Value Stores\n",
+    "\n",
+    "Suitable use cases\n",
+    "- Session data, user profiles, user preferences, shopping carts, …\n",
+    "I.e. when values are only accessed via keys\n",
+    "\n",
+    "When not to use\n",
+    "- Relationships among enƟƟes\n",
+    "- Queries requiring access to the content of the value part\n",
+    "- Set operaƟons involving mulƟple key-value pairs\n",
+    "\n",
+    "Representatives\n",
+    "- Redis, MemcachedDB, Riak KV, Hazelcast, Ehcache, Amazon, SimpleDB, Berkeley DB, Oracle NoSQL, Infinispan, LevelDB, Ignite, Project Voldemort\n",
+    "- Multi-model: OrientDB, ArangoDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key-Value Stores\n",
+    "\n",
+    "<img src=\"photos/keyvalue_example.PNG\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key-Value Stores Use cases\n",
+    "\n",
+    "Key-value data stores are ideal for storing user profiles, blog comments, product recommendations, and session information.\n",
+    "\n",
+    "- Twitter uses Redis to deliver your Twitter timeline\n",
+    "- Pinterest uses Redis to store lists of users, followers, unfollowers, boards, and more\n",
+    "- Coinbase uses Redis to enforce rate limits and guarantee correctness of Bitcoin transactions\n",
+    "- Quora uses Memcached to cache results from slower, persistent databases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Document Stores\n",
+    "\n",
+    "Data model\n",
+    "- Documents\n",
+    "    - Self-describing\n",
+    "    - Hierarchical tree structures (JSON, XML, …)\n",
+    "        – Scalar values, maps, lists, sets, nested documents, …\n",
+    "    - Identified by a unique identifier (key, …)\n",
+    "- Documents are organized into collections\n",
+    "\n",
+    "Query patterns\n",
+    "- Create, update or remove a document\n",
+    "- Retrieve documents according to complex query condiƟons\n",
+    "\n",
+    "Observation\n",
+    "- Extended key-value stores where the value part is examinable!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Document Stores\n",
+    "\n",
+    "Suitable use cases\n",
+    "- Event logging, content management systems, blogs, web, analytics, e-commerce applicaƟons, …\n",
+    "    - I.e. *for structured documents with similar schema*\n",
+    "\n",
+    "When not to use\n",
+    "- *Set operations* involving mulƟple documents\n",
+    "- Design of document structure is constantly changing\n",
+    "    - I.e. when the required level of granularity would outbalance the advantages of aggregates\n",
+    "\n",
+    "RepresentaƟves\n",
+    "- MongoDB, Couchbase, Amazon DynamoDB, CouchDB, RethinkDB, RavenDB, Terrastore\n",
+    "- Multi-model: MarkLogic, OrientDB, OpenLink Virtuoso, ArangoDB\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Document Stores\n",
+    "\n",
+    "```json\n",
+    "[\n",
+    "    {\n",
+    "        \"year\" : 2013,\n",
+    "        \"title\" : \"Turn It Down, Or Else!\",\n",
+    "        \"info\" : {\n",
+    "            \"directors\" : [ \"Alice Smith\", \"Bob Jones\"],\n",
+    "            \"release_date\" : \"2013-01-18T00:00:00Z\",\n",
+    "            \"rating\" : 6.2,\n",
+    "            \"genres\" : [\"Comedy\", \"Drama\"],\n",
+    "            \"image_url\" : \"http://ia.media-imdb.com/images/N/O9ERWAU7FS797AJ7LU8HN09AMUP908RLlo5JF90EWR7LJKQ7@@._V1_SX400_.jpg\",\n",
+    "            \"plot\" : \"A rock band plays their music at high volumes, annoying the neighbors.\",\n",
+    "            \"actors\" : [\"David Matthewman\", \"Jonathan G. Neff\"]\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"year\": 2015,\n",
+    "        \"title\": \"The Big New Movie\",\n",
+    "        \"info\": {\n",
+    "            \"plot\": \"Nothing happens at all.\",\n",
+    "            \"rating\": 0\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Document Stores Use Cases\n",
+    "\n",
+    "- SEGA uses MongoDB for handling 11 million in-game accounts\n",
+    "- Cisco moved its VSRM (video session and research manager) platform to Couchbase to achieve greater scalability\n",
+    "- Aer Lingus uses MongoDB with Studio 3T to handle ticketing and internal apps\n",
+    "- Built on MongoDB, The Weather Channel’s iOS and Android apps deliver weather alerts to 40 million users in real-time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wide Column Stores\n",
+    "\n",
+    "Data model\n",
+    "- Column family (table)\n",
+    "    - Table is a collectioon of similar rows (not necessarily idenƟcal)\n",
+    "\n",
+    "- Row\n",
+    "    - Row is a collectioon of columns\n",
+    "        - Should encompass a group of data that is accessed together\n",
+    "    - Associated with a unique row key\n",
+    "\n",
+    "- Column\n",
+    "    - Column consists of a column name and column value (and possibly other metadata records)\n",
+    "    - Scalar values, but also flat sets, lists or maps may be allowed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wide Column Stores\n",
+    "\n",
+    "Query patterns\n",
+    "- Create, update or remove a row within a given column family\n",
+    "- Select rows according to a row key or simple conditions\n",
+    "\n",
+    "Warning\n",
+    "- Wide column stores are not just a special kind of RDBMSs with a variable set of columns!\n",
+    "\n",
+    "Suitable use cases\n",
+    "- Event logging, content management systems, blogs, …\n",
+    "    - I.e. for structured flat data with similar schema\n",
+    "\n",
+    "When not to use\n",
+    "- ACID transacƟons are required\n",
+    "- Complex queries: aggregaƟon (SUM, AVG, …), joining, …\n",
+    "- Early prototypes: i.e. when database design may change\n",
+    "\n",
+    "RepresentaƟves\n",
+    "- Apache Cassandra, Apache HBase, Apache Accumulo, Hypertable, Google Bigtable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Wide Column Stores\n",
+    "\n",
+    "<img src=\"https://pandaforme.gitbooks.io/introduction-to-cassandra/content/Screen%20Shot%202016-02-24%20at%2012.24.12.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wide Column Stores Use Cases\n",
+    "\n",
+    "Column stores offer very high performance and a highly scalable architecture. Because they’re fast to load and query, they’ve been popular among companies and organizations dealing with big data, IoT, and user recommendation and personalization engines.\n",
+    "\n",
+    "- Spotify uses Cassandra to store user profile attributes and metadata about artists, songs, etc. for better personalization\n",
+    "- Facebook initially built its revamped Messages on top of HBase, but is now also used for other Facebook services like the Nearby Friends feature and search indexing\n",
+    "- Outbrain uses Cassandra to serve over 190 billion personalized content recommendations each month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Databases\n",
+    "\n",
+    "Data model\n",
+    "- Property graphs\n",
+    "    - Directed / undirected graphs, i.e. collecƟons of …\n",
+    "        - nodes (verƟces) for real-world enƟƟes, and\n",
+    "        - relationships (edges) between these nodes\n",
+    "    - Both the nodes and relaƟonships can be associated with addiƟonal properƟes\n",
+    "\n",
+    "Types of databases\n",
+    "- Non-transacƟonal = small number of very large graphs\n",
+    "- TransacƟonal = large number of small graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Databases\n",
+    "\n",
+    "Query paƩerns\n",
+    "- Create, update or remove a node / relaƟonship in a graph\n",
+    "- Graph algorithms (shortest paths, spanning trees, …)\n",
+    "- General graph traversals\n",
+    "- Sub-graph queries or super-graph queries\n",
+    "- Similarity based queries (approximate matching)\n",
+    "\n",
+    "RepresentaƟves\n",
+    "- Neo4j, Titan, Apache Giraph, InfiniteGraph, FlockDB\n",
+    "- MulƟ-model: OrientDB, OpenLink Virtuoso, ArangoDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Databases\n",
+    "\n",
+    "Suitable use cases\n",
+    "- Social networks, rouƟng, dispatch, and locaƟon-based, services, recommendaƟon engines, chemical compounds, biological pathways, linguisƟc trees, …\n",
+    "    - I.e. simply for __graph structures__\n",
+    "\n",
+    "When not to use\n",
+    "- Extensive batch operaƟons are required\n",
+    "    - MulƟple nodes / relaƟonships are to be affected\n",
+    "- Only too large graphs to be stored\n",
+    "    - Graph distribuƟon is difficult or impossible at all\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Databases\n",
+    "\n",
+    "The image below shows how a relational database like MySQL works, which use memory-intensive and more complicated join operations to search entire tables to find a match:\n",
+    "\n",
+    "<img src=\"https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads/from_relational_model.png\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Databases\n",
+    "\n",
+    "Compare that to a graph database, which already predetermines relationships based on connected nodes, making queries much faster and more economical.\n",
+    "\n",
+    "<img src=\"https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads/relational_to_graph.png\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Databases Use Cases\n",
+    "\n",
+    "Graph databases are great for establishing data relationships especially when dealing with large data sets. They offer blazing fast query performance that relational databases cannot compete with, especially as data grows much deeper.\n",
+    "\n",
+    "- Walmart uses Neo4j to provide customers personalized, relevant product recommendations and promotions\n",
+    "- Medium uses Neo4j to build their social graph to enhance content personalization\n",
+    "- Cisco uses Neo4j to mine customer support cases to anticipate bugs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1350,37 +1821,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "source": [
-    "# Graph Databases"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
-    "## Graph Theory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false",
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
-    "## Neo4j"
-   ]
   },
   {
    "cell_type": "code",
@@ -1411,7 +1852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
